Fixing visibility of content on mobile

--- a/wp-content/plugins/crown-blocks/src/block-hover-container/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-hover-container/style.scss
@@ -179,9 +179,11 @@
 		.content {
 			width: 100%;
 			transition: opacity .4s, transform .4s ease-out;
-			opacity: 0;
-			transform: translateX(-1rem);
 			font-size: 1.25rem;
+			@media (min-width: 992px) {
+				opacity: 0;
+				transform: translateX(-1rem);
+			}
 		}
 		.cta-label-container {
 			display: none;
